[gd_scene load_steps=12 format=3 uid="uid://dfsoel7qanip1"]

[ext_resource type="Texture2D" uid="uid://b3swhsd1drnlq" path="res://icon.svg" id="2_8ur7e"]
[ext_resource type="Script" path="res://src/game/game.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://dfqr52hnsmq8c" path="res://assets_common/gfx/common/8x8_white.png" id="3_832vq"]
[ext_resource type="Script" path="res://src/game/world_camera.gd" id="4_x42rn"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wlqn3"]
resource_name = "age_0"
texture = ExtResource("3_832vq")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
0:0/0/modulate = Color(0.258824, 1, 0.258824, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3sb4a"]
resource_name = "age_1"
texture = ExtResource("3_832vq")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
0:0/0/modulate = Color(0.655, 1, 0.55, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_026kg"]
resource_name = "age_2"
texture = ExtResource("3_832vq")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
0:0/0/modulate = Color(0.890196, 1, 0.588235, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5uo3f"]
resource_name = "age_3"
texture = ExtResource("3_832vq")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
0:0/0/modulate = Color(1, 0.901961, 0.34902, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_65g0c"]
resource_name = "age_4"
texture = ExtResource("3_832vq")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
0:0/0/modulate = Color(1, 0.529412, 0.529412, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vpiuv"]
resource_name = "age_5"
texture = ExtResource("3_832vq")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
0:0/0/modulate = Color(1, 0.211765, 0.223529, 1)

[sub_resource type="TileSet" id="TileSet_tehxl"]
sources/0 = SubResource("TileSetAtlasSource_wlqn3")
sources/1 = SubResource("TileSetAtlasSource_3sb4a")
sources/2 = SubResource("TileSetAtlasSource_026kg")
sources/3 = SubResource("TileSetAtlasSource_5uo3f")
sources/4 = SubResource("TileSetAtlasSource_65g0c")
sources/5 = SubResource("TileSetAtlasSource_vpiuv")

[node name="Game" type="Node2D"]
script = ExtResource("3")
STEP_DELAY = 0.2
STEP_EVERY_FRAME = true

[node name="Icon" type="Sprite2D" parent="."]
visible = false
position = Vector2(251, 116)
texture = ExtResource("2_8ur7e")

[node name="Grid" type="TileMap" parent="."]
unique_name_in_owner = true
position = Vector2(320, 320)
tile_set = SubResource("TileSet_tehxl")
format = 2
layer_0/name = "main"

[node name="WorldCamera" type="Camera2D" parent="Grid"]
position_smoothing_enabled = true
script = ExtResource("4_x42rn")
zoom_speed = 0.2

[node name="UI" type="Node" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ClearButton" type="Button" parent="UI/Control/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "clear
"

[node name="StartButton" type="Button" parent="UI/Control/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "start"

[node name="PauseContinueButton" type="Button" parent="UI/Control/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "continue"
